# CITS3003_Project_Template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/angel/: CMakeLists.txt
lib/angel/include/: Angel.h  CheckError.h
lib/bitmap/: CMakeLists.txt
lib/bitmap/include/: bitmap.h
lib/bitmap/src/: bitmap.c
src/: gnatidread.h  gnatidread2.h  scene-start.cpp
